# geobase-inference

./: README.md  TODO.md  pyproject.toml
docs/: changestar.md  clay.md
src/geobase_inference/: __init__.py  core.py  output_types.py
src/geobase_inference/geo/: __init__.py  input_types.py  input_validation.py  raster.py  sources.py
src/geobase_inference/models/: __init__.py  changestar.py  clay.py  clay_types.py
src/geobase_inference/storage/: __init__.py  hub.py  hub_bucket_client.py
tests/: conftest.py  test_core.py  test_handlers.py  test_sources.py  test_storage.py
